--- a/Exercise 2 CSS/assets/styles/flex.css
+++ b/Exercise 2 CSS/assets/styles/flex.css
@@ -6,8 +6,6 @@
 
     display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: flex-end;
 }
 
 header, nav {
@@ -23,41 +21,45 @@ nav > span {
     border: 1px solid black;
 }
 
-aside {
+main {
+    display: flex;
     flex: 1;
+    width: 100%;
+    justify-content: space-between;
 }
 
 #Aside1 {
     background-color: yellow;
-}
-
-#Aside2 {
-    background-color: purple;
-}
-
-article {
-    background-color: dodgerblue;
-
     flex: 1;
-    box-sizing: border-box; /* To place border inside the box */
-    border: 1px dashed white;
 }
 
 #article {
     display: flex;
-    flex: 5;
+    flex: 3;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 
-/*@media (max-width: 800px) {*/
-/*    article:nth-child(1),*/
-/*    article:nth-child(2) {*/
-/*        flex: 1 1 50%;*/
-/*    }*/
-/*    article:nth-child(3) {*/
-/*        flex: 1 1 100%;*/
-/*    }*/
-/*}*/
+article {
+    background-color: dodgerblue;
+    box-sizing: border-box;
+    border: 1px dashed white;
+    flex: 0 0 300px;
+}
+
+article:nth-child(1),
+article:nth-child(2) {
+    flex-grow: 1;
+}
+
+article:nth-child(3) {
+    flex-basis: 100%;
+}
+
+#Aside2 {
+    background-color: purple;
+    flex: 1;
+}
 
 footer {
     background-color: limegreen;
