--- a/Exercise 2 CSS/assets/styles/flex.css
+++ b/Exercise 2 CSS/assets/styles/flex.css
@@ -32,11 +32,17 @@ header, nav {
 
 nav {
     display: flex;
+    flex-wrap: wrap;
 }
 
 nav > span {
     flex: 1;
     border: 1px solid black;
+}
+
+nav > h3 {
+
+    flex-basis: 100%;
 }
 
 main {
