--- a/Exercise 2 CSS/assets/styles/flex.css
+++ b/Exercise 2 CSS/assets/styles/flex.css
@@ -1,14 +1,3 @@
-/* sorry, had to cheat, had no better idea */
-@media (max-width: 850px) {
-    article:nth-child(1), article:nth-child(2){
-        flex-basis: 50%;
-    }
-
-    article:nth-child(3){
-        flex-basis: 100%;
-    }
-}
-
 #Aside1 {
     background-color: yellow;
     flex: 1;
@@ -65,7 +54,8 @@ article {
     background-color: dodgerblue;
     box-sizing: border-box;
     border: 1px dashed white;
-    flex: 1;
+    flex: 1 1 33.33%;
+    min-width: 200px;
 }
 
 footer {
