--- a/Exercise 2 CSS/assets/styles/animation.css
+++ b/Exercise 2 CSS/assets/styles/animation.css
@@ -7,8 +7,40 @@ article {
 
 section {
     background-color: gray;
-    height: 30vh;
+    height: 200px;
     width: 45vw;
     border-radius: 25px;
     text-align: center;
+}
+
+/* Cube */
+#cube {
+    width: 100px;
+    height: 100px;
+    border: 1px solid;
+    margin: auto;
+    background-color: red;
+
+    animation-name: changeColor, spin;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
+
+@keyframes changeColor {
+    0% {
+        background-color: red;
+    }
+    100% {
+        background-color: yellow;
+    }
+}
+
+@keyframes spin {
+    0%, 10% {
+        transform: rotate(0deg)
+    }
+    90%, 100% {
+        transform: rotate(360deg)
+    }
 }
