--- a/Exercise 2 CSS/assets/styles/animation.css
+++ b/Exercise 2 CSS/assets/styles/animation.css
@@ -1,46 +1,91 @@
 article {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
 }
 
 section {
-    background-color: gray;
-    height: 200px;
-    width: 45vw;
-    border-radius: 25px;
-    text-align: center;
+  background-color: gray;
+  height: 200px;
+  width: 45vw;
+  border-radius: 25px;
+  text-align: center;
 }
 
 /* Cube */
 #cube {
-    width: 100px;
-    height: 100px;
-    border: 1px solid;
-    margin: auto;
-    background-color: red;
+  width: 100px;
+  height: 100px;
+  border: 1px solid;
+  margin: auto;
+  background-color: red;
 
-    animation-name: changeColor, spin;
-    animation-duration: 5s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+  animation-name: changeColor, spin;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
 }
 
 @keyframes changeColor {
-    0% {
-        background-color: red;
-    }
-    100% {
-        background-color: yellow;
-    }
+  0% {
+    background-color: red;
+  }
+  100% {
+    background-color: yellow;
+  }
 }
 
 @keyframes spin {
-    0%, 10% {
-        transform: rotate(0deg)
-    }
-    90%, 100% {
-        transform: rotate(360deg)
-    }
+  0%,
+  10% {
+    transform: rotate(0deg);
+  }
+  90%,
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+/* Bouncing */
+#bouncing div {
+  height: 120px;
+  width: 30px;
+  border: 1px solid black;
+  margin: auto;
+  position: relative;
+}
+
+#bouncing div > div {
+  position: absolute;
+  height: 30px;
+  width: 30px;
+  background-color: black;
+  border-radius: 50%;
+
+  animation-name: ball;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  animation-timing-function: linear;
+}
+
+@keyframes ball {
+  0% {
+    top: 0px;
+  }
+  25% {
+    top: 90px;
+  }
+  50% {
+    top: 60px;
+  }
+  75% {
+    top: 90px;
+  }
+  90% {
+    top: 80px;
+  }
+  100% {
+    top: 90px;
+  }
 }
