--- a/Exercise 2 CSS/assets/styles/animation.css
+++ b/Exercise 2 CSS/assets/styles/animation.css
@@ -1,14 +1,19 @@
+.container {
+    display: grid;
+    grid-template-columns: 1fr 9fr;
+}
+
 article {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  gap: 20px;
+  height: 90vh;
 }
 
 section {
   background-color: gray;
   height: 200px;
-  width: 45vw;
+  width: 40vw;
   border-radius: 25px;
   text-align: center;
 }
@@ -130,4 +135,18 @@ section {
   100% {
     background-color: white;
   }
+}
+
+/* Drop */
+aside {
+    width: 50px;
+    height: 10vh;
+    text-align: center;
+    color: white;
+    background-color: black;
+    transition: height 2s;
+}
+
+aside:hover {
+    height: 90vh;
 }
