--- a/Exercise 2 CSS/assets/styles/animation.css
+++ b/Exercise 2 CSS/assets/styles/animation.css
@@ -1,6 +1,6 @@
 .container {
-    display: grid;
-    grid-template-columns: 1fr 9fr;
+  display: grid;
+  grid-template-columns: 1fr 9fr;
 }
 
 article {
@@ -13,7 +13,7 @@ article {
 section {
   background-color: gray;
   height: 200px;
-  width: 40vw;
+  width: 600px;
   border-radius: 25px;
   text-align: center;
 }
@@ -30,6 +30,7 @@ section {
   animation-duration: 5s;
   animation-iteration-count: infinite;
   animation-direction: alternate;
+  animation-timing-function: linear;
 }
 
 @keyframes changeColor {
@@ -48,7 +49,7 @@ section {
   }
   90%,
   100% {
-    transform: rotate(360deg);
+    transform: rotate(359deg);
   }
 }
 
@@ -139,14 +140,82 @@ section {
 
 /* Drop */
 aside {
-    width: 50px;
-    height: 10vh;
-    text-align: center;
-    color: white;
-    background-color: black;
-    transition: height 2s;
+  width: 50px;
+  height: 10vh;
+  text-align: center;
+  color: white;
+  background-color: black;
+  transition: height 2s;
 }
 
 aside:hover {
-    height: 90vh;
+  height: 90vh;
+}
+
+/* Queue */
+#queue {
+  position: relative;
+}
+
+#queue div {
+  height: 20px;
+  width: 20px;
+  border: 1px solid black;
+  background-color: orange;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+
+  animation: queue 8s infinite linear, rotate 3s infinite linear;
+}
+
+#queue div:nth-child(2) {
+  animation-delay: 0.5s;
+}
+#queue div:nth-child(3) {
+  animation-delay: 1s;
+}
+#queue div:nth-child(4) {
+  animation-delay: 1.5s;
+}
+#queue div:nth-child(5) {
+  animation-delay: 2s;
+}
+#queue div:nth-child(6) {
+  animation-delay: 2.5s;
+}
+#queue div:nth-child(7) {
+  animation-delay: 3s;
+}
+
+@keyframes queue {
+  0% {
+    top: 10px;
+    left: 10px;
+  }
+  25% {
+    top: 10px;
+    left: 570px;
+  }
+  50% {
+    top: 170px;
+    left: 570px;
+  }
+  75% {
+    top: 170px;
+    left: 10px;
+  }
+  100% {
+    top: 10px;
+    left: 10px;
+  }
+}
+
+@keyframes rotate {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
 }
