--- a/Exercise 2 CSS/assets/styles/responsive/weather.css
+++ b/Exercise 2 CSS/assets/styles/responsive/weather.css
@@ -1,4 +1,18 @@
 /* Global */
+* {
+    box-sizing: border-box;
+}
+
+main {
+  width: 100%;
+}
+
+@media screen and (min-width:1200px) {
+    main {
+        width: 50%;
+      }
+}
+
 p {
   margin-top: 0;
   margin-bottom: 0;
@@ -16,7 +30,7 @@ h1 {
 /* Upper Part */
 #upper > section {
   display: inline-block;
-  width: 30%;
+  width: 40%;
 }
 
 #upper > section:nth-of-type(1) > * {
@@ -25,3 +39,24 @@ h1 {
 }
 
 /* Main Body */
+#main > section {
+  border-top: 1px solid black;
+  padding: 10px;
+  height: 65px;
+}
+
+#main > section:last-of-type {
+  border-bottom: 1px solid black;
+}
+
+.dayPart {
+  display: inline-block;
+  width: 24%;
+  height: 100%;
+  vertical-align: middle;
+  box-sizing: border-box;
+}
+
+#main > section > i {
+    font-size: 30px;
+}
