--- a/Exercise 2 CSS/assets/styles/responsive/weather.css
+++ b/Exercise 2 CSS/assets/styles/responsive/weather.css
@@ -1,16 +1,10 @@
 /* Global */
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 main {
   width: 100%;
-}
-
-@media screen and (min-width:1200px) {
-    main {
-        width: 50%;
-      }
 }
 
 p {
@@ -57,6 +51,34 @@ h1 {
   box-sizing: border-box;
 }
 
-#main > section > i {
-    font-size: 30px;
+#main > section > div > i {
+  font-size: 30px;
+}
+
+/* Main Large Screen */
+@media screen and (min-width: 900px) {
+
+    
+  #main > section {
+    border: none !important;
+    height: 100px;
+    display: inline-block;
+    width: 13%;
+    padding: 0;
+    margin: 0;
+  }
+
+  #main > section > * {
+    text-align: center;
+  }
+
+  .dayPart {
+    display: block;
+    height: auto;
+    width: auto;
+  }
+
+  div.dayPart > p {
+    display: inline-block;
+  }
 }
