Page Web: Add little margin for header & upper

--- a/Exercise 2 CSS/assets/styles/responsive/weather.css
+++ b/Exercise 2 CSS/assets/styles/responsive/weather.css
@@ -7,6 +7,10 @@ main {
   width: 100%;
 }
 
+header, article:nth-of-type(1) {
+    margin-left:30px;
+}
+
 p {
   margin-top: 0;
   margin-bottom: 0;
