--- a/Exercise 2 CSS/assets/styles/responsive/grid.css
+++ b/Exercise 2 CSS/assets/styles/responsive/grid.css
@@ -7,23 +7,29 @@
 .fluid-container {
   height: 100%;
   width: 100%;
+  padding: 5px;
 }
 
 .row {
-    width: 100%;
+  width: 100%;
 }
 
 /* HEADER */
 header {
-    width: 100%
+  width: 100%;
 }
 
 header > div:nth-child(1) {
-    float: left;
+  float: left;
 }
 
 header > div:nth-child(2) {
-    float: right;
+  float: right;
+}
+
+/* NAV */
+nav {
+  text-align: center;
 }
 
 @media screen and (min-width: 900px) {
