--- a/Exercise 2 CSS/assets/styles/responsive/grid.columns.css
+++ b/Exercise 2 CSS/assets/styles/responsive/grid.columns.css
@@ -1,47 +1,99 @@
+/* MOBILE */
 .col-xs-1 {
-    width: calc(100%/12)
+  width: calc(100% / 12);
 }
 
 .col-xs-2 {
-    width: calc(200%/12)
+  width: calc(200% / 12);
 }
 
 .col-xs-3 {
-    width: calc(300%/12)
+  width: calc(300% / 12);
 }
 
 .col-xs-4 {
-    width: calc(400%/12)
+  width: calc(400% / 12);
 }
 
 .col-xs-5 {
-    width: calc(500%/12)
+  width: calc(500% / 12);
 }
 
 .col-xs-6 {
-    width: calc(600%/12)
+  width: calc(600% / 12);
 }
 
 .col-xs-7 {
-    width: calc(700%/12)
+  width: calc(700% / 12);
 }
 
 .col-xs-8 {
-    width: calc(800%/12)
+  width: calc(800% / 12);
 }
 
 .col-xs-9 {
-    width: calc(900%/12)
+  width: calc(900% / 12);
 }
 
 .col-xs-10 {
-    width: calc(1000%/12)
+  width: calc(1000% / 12);
 }
 
 .col-xs-11 {
-    width: calc(1100%/12)
+  width: calc(1100% / 12);
 }
 
 .col-xs-12 {
-    width: calc(1200%/12)
+  width: calc(1200% / 12);
+}
+
+/* SMALL */
+@media screen and (min-width: 700px) {
+  .col-sm-1 {
+    width: calc(100% / 12);
+  }
+
+  .col-sm-2 {
+    width: calc(200% / 12);
+  }
+
+  .col-sm-3 {
+    width: calc(300% / 12);
+  }
+
+  .col-sm-4 {
+    width: calc(400% / 12);
+  }
+
+  .col-sm-5 {
+    width: calc(500% / 12);
+  }
+
+  .col-sm-6 {
+    width: calc(600% / 12);
+  }
+
+  .col-sm-7 {
+    width: calc(700% / 12);
+  }
+
+  .col-sm-8 {
+    width: calc(800% / 12);
+  }
+
+  .col-sm-9 {
+    width: calc(900% / 12);
+  }
+
+  .col-sm-10 {
+    width: calc(1000% / 12);
+  }
+
+  .col-sm-11 {
+    width: calc(1100% / 12);
+  }
+
+  .col-sm-12 {
+    width: calc(1200% / 12);
+  }
 }
