--- a/Exercise 3 JS/assets/styles/game.css
+++ b/Exercise 3 JS/assets/styles/game.css
@@ -1,3 +1,4 @@
+/* ######### Type Container ######### */
 @import url('./grid.css');
 
 @font-face {
@@ -16,6 +17,7 @@
   border: 1px solid black;
 }
 
+/* ######### Type Container ######### */
 .typeContainer:hover {
   cursor: pointer;
 }
@@ -28,4 +30,24 @@
 .typeContainer > p {
   margin-bottom: 5px;
   font-weight: bold;
+}
+
+/* ######### Battle Container ######### */
+#battleContainer {
+  display: flex; /* Vertical center */
+  align-items: center;
+  justify-content: center;
+  height: 20vh;
+}
+
+@media screen and (min-width: 700px) {
+  #battleContainer {
+    height: 50vh;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  #battleContainer {
+    height: 65vh;
+  }
 }
