Add: Battle Animation

--- a/Exercise 3 JS/assets/styles/game.css
+++ b/Exercise 3 JS/assets/styles/game.css
@@ -17,6 +17,10 @@
   border: 1px solid black;
 }
 
+.invisible {
+  visibility: hidden;
+}
+
 /* ######### Type Container ######### */
 .typeContainer:hover {
   cursor: pointer;
