--- a/Exercise 3 JS/assets/styles/game.css
+++ b/Exercise 3 JS/assets/styles/game.css
@@ -132,3 +132,20 @@ body {
     transform: translateY(-50%) translateX(100vw);
   }
 }
+
+/* ######### Turn ######### */
+#turn {
+  position: absolute;
+  width: 100%;
+  height: 150px;
+  top: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#turn > * {
+  margin: 10px;
+  padding: 5px;
+}
